--- a/portfoliop.html
+++ b/portfoliop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Шапка -->
     <header>
       <div class="container header-box">
         <a href="./" class="logo link"
@@ -31,172 +32,173 @@
             <li><a href="" class="nav-link link">Contacts</a></li>
           </ul>
         </nav>
-        <ul class="contact">
+        <ul class="site-contacts list">
           <li>
-            <a class="linknav" href="mailto:info@devstudio.com" lang="en"
+            <a href="mailto:info@devstudio.com" class="contacts-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="linknav" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contacts-link link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <section class="main-section">
+      <section class="porfolio-main">
         <div class="container">
-          <h1 class="visually-hidden">Portfolio</h1>
-          <ul class="button list">
-            <li>
-              <button class="portfolio-button-all" type="button">All</button>
+          <h1 hidden>List of works</h1>
+          <ul class="filters-list list">
+            <li class="item">
+              <button type="button" class="filters-button button">All</button>
             </li>
-            <li>
-              <button class="portfolio-button-all" type="button">
+            <li class="item">
+              <button type="button" class="filters-button button">
                 Web Site
               </button>
             </li>
-            <li>
-              <button class="portfolio-button-all" type="button">App</button>
+            <li class="item">
+              <button type="button" class="filters-button button">App</button>
             </li>
-            <li>
-              <button class="portfolio-button-all" type="button">Design</button>
+            <li class="item">
+              <button type="button" class="filters-button button">
+                Design
+              </button>
             </li>
-            <li>
-              <button class="portfolio-button-all" type="button">
+            <li class="item">
+              <button type="button" class="filters-button button">
                 Marketing
               </button>
             </li>
           </ul>
         </div>
         <div class="container">
-          <ul class="portfolio list">
+          <ul class="portfolio-list list">
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/banking_app_interface_concept.jpg"
-                  alt="візуалізація банківського додатку"
+                  src="./images/portfoliofoto2.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                  <p class="portfolio product">App</p>
+                  <p class="portfolio-text">App</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/cashless_payment.jpg"
-                  alt="безготівковий розрахунок"
+                  src="./images/portfolio1.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Cashless Payment</h2>
-                  <p class="portfolio product">Marketing</p>
+                  <p class="portfolio-text">Marketing</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/meditaion_app.jpg"
-                  alt="додаток для медитації"
+                  src="./images/portfoliofoto.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Meditaion App</h2>
-
-                  <p class="portfolio product">App</p>
+                  <p class="portfolio-text">App</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/taxi_service.jpg"
-                  alt="сервіс таксі"
+                  src="./images/portfoliofoto3.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Taxi Service</h2>
-
-                  <p class="portfolio product">Marketing</p>
+                  <p class="portfolio-text">Marketing</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/screen_illustrations.jpg"
-                  alt="заставки для екрану телефону"
+                  src="./images/portfoliofoto4.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
-
-                  <p class="portfolio product">Design</p>
+                  <p class="portfolio-text">Design</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/online_courses.jpg"
-                  alt="онлайн курси "
+                  src="./images/portfoliofoto5.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Online Courses</h2>
-                  <p class="portfolio product">Marketing</p>
+                  <p class="portfolio-text">Marketing</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/instagram_stories_concept.jpg"
-                  alt="концепція інстаграм сториз"
+                  src="./images/portfoliofoto6.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                  <p class="portfolio product">Design</p>
+                  <p class="portfolio-text">Design</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/organic_food.jpg"
-                  alt="органічна їжа"
+                  src="./images/portfoliofoto7.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Organic Food</h2>
-                  <p class="portfolio product">Web Site</p>
+                  <p class="portfolio-text">Web Site</p>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" class="list link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/fresh_coffee.jpg"
-                  alt="свіжа кава"
+                  src="./images/portfoliofoto8.jpg"
+                  alt="photo of works"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
-                  <p class="portfolio product">Web Site</p>
+                  <p class="portfolio-text">Web Site</p>
                 </div>
               </a>
             </li>
@@ -205,15 +207,14 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-footer-second">Studio</span></a
+      <div class="container footer-box">
+        <a href="./" class="logo link"
+          ><span class="footer-web">WEB</span
+          ><span class="footer-studio">STUDIO</span></a
         >
-        <p class="footer_text">
-          Increase the flow of customers and
-          <br />
-          sales for your business with digital
-          <br />
+        <p class="footer-text">
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
           marketing & growth solutions.
         </p>
       </div>
