--- a/index.html
+++ b/index.html
@@ -1,165 +1,183 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a class="link" href="./index.html"
-          ><span class="logo-accent">Web</span
-          ><span class="logo-accent-second">Studio</span></a
+      <div class="container header-box">
+        <a href="./" class="logo link"
+          ><span class="logo-web">WEB</span>
+          <span class="logo-studio">STUDIO</span></a
         >
-        <ul>
-          <li><a class="link-current" href="./index.html">Студія</a></li>
-          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-          <li><a class="link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li>
-          <a class="linknav" href="mailto:info@devstudio.com" lang="en"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="linknav" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section>
-        <h1 class="hero-title">
-          Ефективні рішення для вашого бізнесу <br />
-          <button class="primary-button" type="button">Замовити послугу</button>
-        </h1>
-      </section>
-      <section>
-        <h2 class="visually-hidden">Наші особливості</h2>
-        <ul>
+        <nav>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="nav-link link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li><a href="" class="nav-link link">Contacts</a></li>
+          </ul>
+        </nav>
+        <ul class="contact">
           <li>
-            <a class="advantage-card" href="#"></a>
-            <h3 class="advantage-card-title">Увага до деталей</h3>
-            <p class="advantage-card-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <a class="advantage-card" href="#"></a>
-            <h3 class="advantage-card-title">Пунктуальність</h3>
-            <p class="advantage-card-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <a class="advantage-card" href="#"></a>
-            <h3 class="advantage-card-title">Планування</h3>
-            <p class="advantage-card-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <a class="advantage-card" href="#"></a>
-            <h3 class="advantage-card-title">Сучасні технології</h3>
-            <p class="advantage-card-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img
-              src="images/img1.jpg"
-              alt="чоловік працює за компьютером та планшетом"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="images/img2.jpg"
-              alt="жінка працює за телефоном та компьютером"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="images/img3.jpg"
-              alt="людина працює за планшетом"
-              width="370"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="section-title">Наша команда</h2>
-        <ul>
-          <li>
-            <img src="images/img4.jpg" alt="Product Designer" width="270" />
-            <h3 class="team-card-title">Ігор Дем'яненко</h3>
-            <p class="team-card-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="images/img5.jpg" alt="Frontend Developer" width="270" />
-            <h3 class="team-card-title">Ольга Рєпіна</h3>
-            <p class="team-card-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="images/img6.jpg" alt="Marketing" width="270" />
-            <h3 class="team-card-title">Микола Тарасов</h3>
-            <p class="team-card-text">Marketing</p>
-          </li>
-          <li>
-            <img src="images/img7.jpg" alt="UI Designer" width="270" />
-            <h3 class="team-card-title">Михайло Єрмаков</h3>
-            <p class="team-card-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a class="link" href="./index.html"
-        ><span class="logo-footer">Web</span
-        ><span class="logo-footer-second">Studio</span></a
-      >
-      <address>
-        <ul>
-          <li>
-            <a
-              class="link-adress"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Украінки, 26</a
-            >
-          </li>
-          <li>
-            <a class="link-contacts" href="mailto:info@devstudio.com" lang="en"
+            <a class="linknav" href="mailto:info@devstudio.com" lang="en"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link-contacts" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="linknav" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="primary-button" type="button">Order Service</button>
+        </div>
+      </section>
+      <section class="feature">
+        <div class="container">
+          <h2 class="visually-hidden">Our Benifits</h2>
+          <ul class="advantage-card">
+            <li>
+              <a class="advantage-card" href="#"></a>
+              <h3 class="advantage-card-title">Strategy</h3>
+              <p class="advantage-card-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <a class="advantage-card" href="#"></a>
+              <h3 class="advantage-card-title">Punctuality</h3>
+              <p class="advantage-card-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <a class="advantage-card" href="#"></a>
+              <h3 class="advantage-card-title">Diligence</h3>
+              <p class="advantage-card-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <a class="advantage-card" href="#"></a>
+              <h3 class="advantage-card-title">Technologies</h3>
+              <p class="advantage-card-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="pic">
+        <div class="container">
+          <h2 class="pic-title">What Are We Doing</h2>
+          <ul class="pic-list">
+            <li>
+              <img src="images/img1.jpg" alt="монітор" width="370" />
+            </li>
+            <li>
+              <img src="images/img2.jpg" alt="єкран телефонів" width="370" />
+            </li>
+            <li>
+              <img
+                src="images/img3.jpg"
+                alt="людина працює за ноутбуком та телефоном"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="team">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                class="team-foto"
+                src="./images/img4.jpg"
+                alt="Product Designer"
+                width="270"
+              />
+              <div class="team-container">
+                <h3 class="team-worker">Mark Guerrero</h3>
+                <p class="team-job" lang="en">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-foto"
+                src="./images/img5.jpg"
+                alt="Frontend Developer"
+                width="270"
+              />
+              <div class="Frontend developer">
+                <h3 class="team-worker">Tom Ford</h3>
+                <p class="team-job" lang="en">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-foto"
+                src="./images/img6.jpg"
+                alt="Marketing"
+                width="270"
+              />
+              <div class="worker-container">
+                <h3 class="team-worker">Camila Garcia</h3>
+                <p class="team-job" lang="en">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-foto"
+                src="./images/img7.jpg"
+                alt="UI designer"
+                width="270"
+              />
+              <div class="worker-container">
+                <h3 class="team-worker">Daniel Wilson</h3>
+                <p class="team-job" lang="en">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo-footer" href="./index.html"
+          >Web<span class="logo-footer-second">Studio</span></a
+        >
+        <p class="footer_text">
+          Increase the flow of customers and
+          <br />
+          sales for your business with digital
+          <br />
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
